# Kaggle

./: Digit_Recognizer.py  Practice.py  Remark  pyproject.toml
