[project]
name = "kaggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "matplotlib>=3.6.0",
    "numpy>=1.23.5,<2.0.0",
    "pandas>=1.5.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.2.0",
    "seaborn>=0.12.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
